# onoffmonitorserver

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
onoffmonitorserver/: apps.py  models.py  serializers.py  views.py
onoffmonitorserver/migrations/: 0001_initial.py
project/: asgi.py  settings.py  urls.py
