[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onoffmonitorserver"
version = "0.0.1"
authors = [
  { name="Joe Greaves" },
]
description = "Django app for monitoring the on/off status of devices"
readme = "README.md"
requires-python = ">=3.9,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=4.2.3",
    "djangorestframework>=3.14.0",
    "django-rest-knox>=4.2.0",
]

[project.urls]
"Homepage" = "https://github.com/Grvs44/onoffmonitorserver"

[tool.setuptools]
packages = ["onoffmonitorserver"]
